[package]
name = "toyos"
version = "0.1.0"
edition = "2021"

# QEMU arguments passed when using `cargo test`.
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
linked_list_allocator = "0.10.4"
pkg-version = "1.0.0"
pc-keyboard = "0.6.1"
pic8259 = "0.10.1"
spin = "0.9.4"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
